<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivProduct"
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_product" />

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineHeight="16dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:lineSpacingExtra="4sp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="Lenovo Legion 7 16 I7 11800 16GB 1TB SSD RTX3070 8GB"
                android:textColor="?attr/colorOnSurface"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="Rp23.499.000"
                android:textColor="?attr/colorOnSurface"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/outline_account_circle_24" />

                <TextView
                    android:id="@+id/tvStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/product_store"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/baseline_star_24" />

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/product_rate"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textSize="10sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="2px"
                    android:layout_height="24px"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    app:dividerColor="?attr/colorOnSurfaceVariant" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="Terjual"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tvSell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/product_sale"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textSize="10sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="8dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btnDelete"
                    android:layout_margin="6dp"
                    android:paddingHorizontal="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_wishlist"
                    android:src="@drawable/baseline_delete_24"
                    />

                <Button
                    android:id="@+id/btnAddToCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button.IconButton.Outlined"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="+ Keranjang"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>